@@ -9,7 +9,7 @@ this repository contains the full copyright notices and license terms. -->
     <label name="to_location"/>
     <field name="to_location"/>
     <label name="product"/>
-    <field name="product"/>
+    <field name="product" view_ids="stock.product_view_list_stock_move"/>
 
     <notebook colspan="4">
         <page string="Move" id="move">
