@@ -1,3 +1,4 @@
+* Display quantity when searching product for move
 * Add packed state to internal shipment
 
 Version 7.4.0 - 2024-11-04
